# klania

./: .editorconfig  .eslintrc.cjs  .lintstagedrc.json  .prettierrc  \  bun.lockb  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.husky/: pre-commit
src/: App.vue
src-tauri/: .sqllsrc.json  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240519164926_songs.up.sql
src-tauri/migrations/2023-11-19-012304_songs/: up.sql
src-tauri/scripts/: run
src-tauri/src/: db.rs  main.rs  menu.rs  schema.rs  song.rs  state.rs
src-tauri/src/db/: mod.rs
src/components/: GreetComponent.vue
